--- a/M101JS.MongoDB.for.Node.js.Developers.md
+++ b/M101JS.MongoDB.for.Node.js.Developers.md
@@ -55,3 +55,85 @@
 1.26. [Blog in Documents](https://www.youtube.com/watch?v=ZjwCzyqKVdY)
 
 1.27. [Introduction to Schema Design](https://www.youtube.com/watch?v=6XE3wZCPiZ8)
+
+## WEEK 2: CRUD
+
+2.1. [CRUD and the Mongo Shell](https://www.youtube.com/watch?v=C7LinMC2o5o)
+
+2.2. [Secrets of the Mongo Shell](https://www.youtube.com/watch?v=IIIzjPp-IRE)
+
+2.3. [BSON Introduced](https://www.youtube.com/watch?v=K3J6WvDW-Hc)
+
+2.4. [Inserting Docs](https://www.youtube.com/watch?v=qqfVxGLIrLg)
+
+2.5. [Introduction to findOne](https://www.youtube.com/watch?v=w9V0fJsDwbQ)
+
+2.6. [Introduction to find](https://www.youtube.com/watch?v=8kKfFK6a0Ak)
+
+2.7. [Querying Using field Selection](https://www.youtube.com/watch?v=UIg86QjSoyY)
+
+2.8. [Querying Using $gt and $lt](https://www.youtube.com/watch?v=FHLrz4VGzkg)
+
+2.9. [Inequalities on Strings](https://www.youtube.com/watch?v=imCCKOevU3c)
+
+2.10. [Using regexes, $exists, $type](https://www.youtube.com/watch?v=lI-jhqYf1JY)
+
+2.11. [Using $or](https://www.youtube.com/watch?v=BW5ElNCRZps)
+
+2.12. [Using $and](https://www.youtube.com/watch?v=hYk7pjgjjzc)
+
+2.13. [Querying Inside Arrays](https://www.youtube.com/watch?v=jvEqwW75Bus)
+
+2.14. [Using $in and $all](https://www.youtube.com/watch?v=QU2NrkviORE)
+
+2.15. [Queries with Dot Notation](https://www.youtube.com/watch?v=NrjFECIfwqk)
+
+2.16. [Querying, Cursors](https://www.youtube.com/watch?v=3jA6iFSEJOI)
+
+2.17. [Counting Results](https://www.youtube.com/watch?v=eKD5bVmNQMI)
+
+2.18. [Wholesale Updating of a Document](https://www.youtube.com/watch?v=g7Fi1xXsuvU)
+
+2.19. [Using the $set Command](https://www.youtube.com/watch?v=XyhNjs2pNVc)
+
+2.20. [Using the $unset Command](https://www.youtube.com/watch?v=LpErz8jLW0I)
+
+2.21. [Using $push, $pop, $pull, $pushAll, $pullAll, $addToSet](https://www.youtube.com/watch?v=GOn0EWKDQoY)
+
+2.22. [Upserts](https://www.youtube.com/watch?v=Dy2p8k3EZs4)
+
+2.23. [Multi-update](https://www.youtube.com/watch?v=2GNNdUmDL-4)
+
+2.24. [Removing Data](https://www.youtube.com/watch?v=5K0t1dU8IJY)
+
+2.25. [getLastError (MongoDB v2.4 and earlier)](https://www.youtube.com/watch?v=a6o0TQjUMug)
+
+2.26. [Node.js Driver: find, findOne, and cursors](https://www.youtube.com/watch?v=elGy_YOtn4Q)
+
+2.27. [Node.js Driver: Using Field Projection](https://www.youtube.com/watch?v=i-C8I5xrvn0)
+
+2.28. [Node.js Driver: Using $gt and $lt](https://www.youtube.com/watch?v=jhqdI1xLVWg)
+
+2.29. [Importing Reddit](https://www.youtube.com/watch?v=2pMtlTeJ8Ek)
+
+2.30. [Node.js Driver: Using $regex](https://www.youtube.com/watch?v=gQVnirqZEbM)
+
+2.31. [Node.js Driver: Using Dot Notation](https://www.youtube.com/watch?v=YNA4EnxgdQY)
+
+2.32. [Node.js Driver: Skip, Limit and Sort](https://www.youtube.com/watch?v=GD78tbm_qvQ)
+
+2.33. [Node.js Driver: Inserting, _id](https://www.youtube.com/watch?v=zrDCLNYbKNU)
+
+2.34. [Node.js Driver: Updating](https://www.youtube.com/watch?v=hf85eZvYosY)
+
+2.35. [Node.js Driver: Upserts](https://www.youtube.com/watch?v=msse79yvaEo)
+
+2.36. [Node.js Driver: findAndModify](https://www.youtube.com/watch?v=QnQxACsXrBk)
+
+2.37. [Node.js Driver: Remove](https://www.youtube.com/watch?v=9Rl2-gzLy20)
+
+2.38. [Blog Introduction](https://www.youtube.com/watch?v=TcDqVQxYWZ0)
+
+2.39. [Blog Application Architecture](https://www.youtube.com/watch?v=M8NCh6JqG8Q)
+
+2.40. [Blog, Session Management](https://www.youtube.com/watch?v=C3CLiy5HkxE)
