--- a/M202.MongoDB.Advanced.Deployment.and.Operations.md
+++ b/M202.MongoDB.Advanced.Deployment.and.Operations.md
@@ -67,3 +67,59 @@
 1.32. [Geographically distributed replica sets](https://www.youtube.com/watch?v=gtZLeXYWq4w)
 
 1.33. [Replica set syncing demo](https://www.youtube.com/watch?v=NbvqYvCsofA)
+
+## CHAPTER 2: MMS MONITORING AND BACKUP
+
+2.1. [MMS overview introduction](https://www.youtube.com/watch?v=5Yc4ZkJVj3g)
+
+2.2. [MMS overview cluster view](https://www.youtube.com/watch?v=qliHSb9Nayo)
+
+2.3. [MMS overview single node view](https://www.youtube.com/watch?v=i7jzSMICWvY)
+
+2.4. [MMS overview other features](https://www.youtube.com/watch?v=yojT9vIutug)
+
+2.5. [MMS registration](https://www.youtube.com/watch?v=V5A1H3LcnUk)
+
+2.6. [MMS setup](https://www.youtube.com/watch?v=JMOVEj-D0YY)
+
+2.7. [MMS backup intro](https://www.youtube.com/watch?v=4d_P2hr2780)
+
+2.8. [MMS backup setup](https://www.youtube.com/watch?v=YT7--a2klHs)
+
+2.9. [MMS agent logs](https://www.youtube.com/watch?v=Osua5IUvxR0)
+
+2.10. [Setting up a sharded cluster using automation](https://www.youtube.com/watch?v=30yPdimOeOw)
+
+2.11. [Connecting to and configuring nodes using automation](https://www.youtube.com/watch?v=BMdFMk8kypA)
+
+2.12. [Upgrading MongoDB versions using automation](https://www.youtube.com/watch?v=6THKTQv4nl4)
+
+2.13. [Administering a sharded cluster using automation](https://www.youtube.com/watch?v=LNy5VK68j9A)
+
+2.14. [Troubleshooting using MMS monitoring: overview](https://www.youtube.com/watch?v=Nh9n7QHU6L8)
+
+2.15. [Troubleshooting using MMS monitoring: first event](https://www.youtube.com/watch?v=ZfwZt5rYcHk)
+
+2.16. [Troubleshooting using MMS monitoring: second event](https://www.youtube.com/watch?v=S6wEzR7XZO0)
+
+2.17. [Troubleshooting using MMS monitoring: recap](https://www.youtube.com/watch?v=fmTviMLeKfU)
+
+2.18. [MMS monitoring default alerts](https://www.youtube.com/watch?v=ROYc-zXI1BU)
+
+2.19. [MMS monitoring recommended alerts](https://www.youtube.com/watch?v=A9dUi95jvZ4)
+
+2.20. [MMS monitoring alerts general methodology](https://www.youtube.com/watch?v=GcJuoEn6HVk)
+
+2.21. [How many MMS agents to deploy](https://www.youtube.com/watch?v=U1vKXkYc-gs)
+
+2.22. [More troubleshooting with MMS monitoring: investigation](https://www.youtube.com/watch?v=XTT8tsw6Blo)
+
+2.23. [More troubleshooting with MMS monitoring: filtering out non-problematic events](https://www.youtube.com/watch?v=jxSrdxykp78)
+
+2.24. [More troubleshooting using MMS monitoring: fixing the problematic event](https://www.youtube.com/watch?v=91p5XiwmuyE)
+
+2.25. [More troubleshooting with MMS monitoring: what caused the problematic event](https://www.youtube.com/watch?v=KvhR3Gf2lUQ)
+
+2.26. [More troubleshooting with MMS monitoring: recovery](https://www.youtube.com/watch?v=-3MJQyCzAPk)
+
+2.27. [MMS miscellaneous administration](https://www.youtube.com/watch?v=nkTtfMfUDMg)
