--- a/M102.MongoDB.for.DBAs.md
+++ b/M102.MongoDB.for.DBAs.md
@@ -45,3 +45,43 @@
 1.21. [Sorting](https://www.youtube.com/watch?v=Ezx1lXaY7jE)
 
 1.22. [Query Language: Cursors](https://www.youtube.com/watch?v=DRs4_hBpPlI)
+
+## CHAPTER 2: CRUD
+
+2.1. [Introduction to Week 2](https://www.youtube.com/watch?v=J_LLMqmPVxA)
+
+2.2. [Insertion](https://www.youtube.com/watch?v=Z_LvS-n85aI)
+
+2.3. [Update](https://www.youtube.com/watch?v=4GVMjVuGPq8)
+
+2.4. [Document Growth/Relocation](https://www.youtube.com/watch?v=EFGyImkjReo)
+
+2.5. [save() Command](https://www.youtube.com/watch?v=fWLiwAC-Q20)
+
+2.6. [Partial Updates & Document Limits](https://www.youtube.com/watch?v=pyG6hvieAjc)
+
+2.7. [Removing Documents](https://www.youtube.com/watch?v=0sBeHFEzwH4)
+
+2.8. [Multi Update](https://www.youtube.com/watch?v=HuXgTJVCNJ0)
+
+2.9. [Upsert](https://www.youtube.com/watch?v=8nlZEd_Jliw)
+
+2.10. [Wire Protocol](https://www.youtube.com/watch?v=LzjYGev1sGg)
+
+2.11. [Bulk() Operations and Methods](https://www.youtube.com/watch?v=4NCDH8KRmtA)
+
+2.12. [Common Commands](https://www.youtube.com/watch?v=EPIuVGNXwO8)
+
+2.13. [db.runCommand()](https://www.youtube.com/watch?v=88IlYfK3i4I)
+
+2.14. [db.isMaster()](https://www.youtube.com/watch?v=qzq4ZIMByrw)
+
+2.15. [db.serverStatus()](https://www.youtube.com/watch?v=TNrWUptluMg)
+
+2.16. [db.currentOp() & db.killOp()](https://www.youtube.com/watch?v=lWxTODnZj5A)
+
+2.17. [ensureIndex(), getIndexes() & dropIndex()](https://www.youtube.com/watch?v=3rh9-sah_8Y)
+
+2.18. [collection.stats() & collection.drop()](https://www.youtube.com/watch?v=EJk9joNfnoA)
+
+2.19. [Review of Commands](https://www.youtube.com/watch?v=Q8v1J7wovl4)
