--- a/M101JS.MongoDB.for.Node.js.Developers.md
+++ b/M101JS.MongoDB.for.Node.js.Developers.md
@@ -137,3 +137,33 @@
 2.39. [Blog Application Architecture](https://www.youtube.com/watch?v=M8NCh6JqG8Q)
 
 2.40. [Blog, Session Management](https://www.youtube.com/watch?v=C3CLiy5HkxE)
+
+## WEEK 3: SCHEMA DESIGN
+
+3.1. [Introduction to Week 3](https://www.youtube.com/watch?v=9urnY4OcuNM)
+
+3.2. [MongoDB Schema Design](https://www.youtube.com/watch?v=itnfWjMnQ4A)
+
+3.3. [Relational Normalization](https://www.youtube.com/watch?v=GX__f2s4hd8)
+
+3.4. [Mongo Design for Blog](https://www.youtube.com/watch?v=PRylEHH5t84)
+
+3.5. [Alternative Schema for Blog](https://www.youtube.com/watch?v=ZvqNWVWB2-o)
+
+3.6. [Living Without Constraints](https://www.youtube.com/watch?v=YFRMkDPaams)
+
+3.7. [Living Without Transactions](https://www.youtube.com/watch?v=FfRr3qjRfww)
+
+3.8. [One to One Relations](https://www.youtube.com/watch?v=cCsfon0vUlQ)
+
+3.9. [One to Many Relations](https://www.youtube.com/watch?v=EIaP1KbVkUc)
+
+3.10. [Many to Many Relations](https://www.youtube.com/watch?v=fEYYjZ7zEHc)
+
+3.11. [Multikeys](https://www.youtube.com/watch?v=KtIY4Q1tUao)
+
+3.12. [Benefits of Embedding](https://www.youtube.com/watch?v=XIN0Dqht08Q)
+
+3.13. [Trees](https://www.youtube.com/watch?v=lIjXyQklGWY)
+
+3.14. [When to Denormalize](https://www.youtube.com/watch?v=jDZ-HFoJ0vg)
