--- a/M102.MongoDB.for.DBAs.md
+++ b/M102.MongoDB.for.DBAs.md
@@ -85,3 +85,47 @@
 2.18. [collection.stats() & collection.drop()](https://www.youtube.com/watch?v=EJk9joNfnoA)
 
 2.19. [Review of Commands](https://www.youtube.com/watch?v=Q8v1J7wovl4)
+
+## CHAPTER 3: PERFORMANCE
+
+3.1. [Welcome to Week 3](https://www.youtube.com/watch?v=dWuuaC-UJ6w)
+
+3.2. [Indexes Explained](https://www.youtube.com/watch?v=0ZPQhyZK_Ro)
+
+3.3. [ensureIndex() Command](https://www.youtube.com/watch?v=uSaIUjj1T18)
+
+3.4. [Collection Scans](https://www.youtube.com/watch?v=qB6435EGS6w)
+
+3.5. [Index Notes](https://www.youtube.com/watch?v=OyXFYhLXTGk)
+
+3.6. [Unique Indexes](https://www.youtube.com/watch?v=WksXV0HrJoQ)
+
+3.7. [Sparse Indexes](https://www.youtube.com/watch?v=0Hl3dBQQMAk)
+
+3.8. [TTL Indexes](https://www.youtube.com/watch?v=dkm04FPmt2g)
+
+3.9. [Geospatial Indexes](https://www.youtube.com/watch?v=S5u9gbhy8tk)
+
+3.10. [Text Indexes](https://www.youtube.com/watch?v=n84CtW4lCkM)
+
+3.11. [dropDups Parameter](https://www.youtube.com/watch?v=O47NQUaK5No)
+
+3.12. [Background Index Creation](https://www.youtube.com/watch?v=rI2Hnqp8BN4)
+
+3.13. [Covered Indexes](https://www.youtube.com/watch?v=boAkBnMUBnw)
+
+3.14. [Explain Plans and hint()](https://www.youtube.com/watch?v=ZPIUiVHp54g)
+
+3.15. [Read & Write Impact on Indexes](https://www.youtube.com/watch?v=wcprB2adSe0)
+
+3.16. [Effects of Document Movement](https://www.youtube.com/watch?v=qY7ZnIxO6ik)
+
+3.17. [PowerOf2Sizes](https://www.youtube.com/watch?v=FxmAnOs-2zE)
+
+3.18. [Read & Write Recap](https://www.youtube.com/watch?v=TO1pY0m1sm0)
+
+3.19. [currentOp() & killOp() Revisited](https://www.youtube.com/watch?v=i7XEKAtRS_M)
+
+3.20. [The Profiler](https://www.youtube.com/watch?v=MzLmI8FNB94)
+
+3.21. [mongostat and mongotop](https://www.youtube.com/watch?v=fEgl1DT_lDA)
