--- a/M202.MongoDB.Advanced.Deployment.and.Operations.md
+++ b/M202.MongoDB.Advanced.Deployment.and.Operations.md
@@ -123,3 +123,43 @@
 2.26. [More troubleshooting with MMS monitoring: recovery](https://www.youtube.com/watch?v=-3MJQyCzAPk)
 
 2.27. [MMS miscellaneous administration](https://www.youtube.com/watch?v=nkTtfMfUDMg)
+
+## CHAPTER 3: MORE MONITORING AND BACKUP OPTIONS; DISASTER RECOVERY
+
+3.1. [mongostat HOWTO](https://www.youtube.com/watch?v=eXTwMmAQNRo)
+
+3.2. [Interpreting mongostat output](https://www.youtube.com/watch?v=0cUCgLrUUSw)
+
+3.3. [netstat and iostat](https://www.youtube.com/watch?v=A85EjNfuZWc)
+
+3.4. [db.serverStatus](https://www.youtube.com/watch?v=qy-55YuD4mg)
+
+3.5. [Disaster recovery: More complex than you might think](https://www.youtube.com/watch?v=pqU8Y2zt7_Y)
+
+3.6. [Reference numbers for disaster recovery](https://www.youtube.com/watch?v=C37HWy121fE)
+
+3.7. [Downtime tolerance matrix](https://www.youtube.com/watch?v=q-sHk2fK9i8)
+
+3.8. [Systems with low tolerance for downtime and data loss](https://www.youtube.com/watch?v=e1baaNZjX94)
+
+3.9. [Can I address downtime and data loss with just 2 nodes?](https://www.youtube.com/watch?v=JqlQbebHvME)
+
+3.10. [Meeting downtime and data loss requirements](https://www.youtube.com/watch?v=wAymKBzSZgA)
+
+3.11. [Considering capacity with downtime and data loss addressed](https://www.youtube.com/watch?v=-tsew5P5-eE)
+
+3.12. [High tolerance for downtime](https://www.youtube.com/watch?v=kQ7ZLAa2hf4)
+
+3.13. [High tolerance for data loss](https://www.youtube.com/watch?v=gwodMJ9yVw0)
+
+3.14. [Sharded clusters](https://www.youtube.com/watch?v=GxzW9un10zM)
+
+3.15. [Backup strategies](https://www.youtube.com/watch?v=UCRLsQ1DOVY)
+
+3.16. [Filesystem-based backup strategies](https://www.youtube.com/watch?v=C-LxF8eZQD8)
+
+3.17. [Filesystem-based backup when using RAID](https://www.youtube.com/watch?v=8cHCUjBMIZc)
+
+3.18. [Restoration caveats](https://www.youtube.com/watch?v=6DuhXsbIZTI)
+
+3.19. [MongoDB tools for backup](https://www.youtube.com/watch?v=Ln6gyZ_0yDk)
