--- a/M101JS.MongoDB.for.Node.js.Developers.md
+++ b/M101JS.MongoDB.for.Node.js.Developers.md
@@ -167,3 +167,183 @@
 3.13. [Trees](https://www.youtube.com/watch?v=lIjXyQklGWY)
 
 3.14. [When to Denormalize](https://www.youtube.com/watch?v=jDZ-HFoJ0vg)
+
+## WEEK 4: PERFORMANCE
+
+4.1. [Introduction to Week 4](https://www.youtube.com/watch?v=8qBXI8ggV88)
+
+4.2. [Indexes](https://www.youtube.com/watch?v=kkIAqyqYOCc)
+
+4.3. [Creating Indexes](https://www.youtube.com/watch?v=tRqenx45UAM)
+
+4.4. [Discovering Indexes](https://www.youtube.com/watch?v=hH7kYu_-FXg)
+
+4.5. [Multikey Indexes](https://www.youtube.com/watch?v=8DqRASZGu9k)
+
+4.6. [Multikey Continued](https://www.youtube.com/watch?v=mPSGG2p33RQ)
+
+4.7. [Index Creation Option, Unique](https://www.youtube.com/watch?v=99-5N213g0w)
+
+4.8. [Index Creation, Removing Dups](https://www.youtube.com/watch?v=s6KZsAhSUO4)
+
+4.9. [Index Creation, Sparse](https://www.youtube.com/watch?v=Gi4uZXLh0Ks)
+
+4.10. [Index Creation, Background](https://www.youtube.com/watch?v=28wCvoXmY7A)
+
+4.11. [Using Explain](https://www.youtube.com/watch?v=r5YeICVzDjQ)
+
+4.12. [When is an Index Used?](https://www.youtube.com/watch?v=Lwms58Y_3Jc)
+
+4.13. [How Large is Your Index?](https://www.youtube.com/watch?v=oywrqWNY46s)
+
+4.14. [Index Cardinality](https://www.youtube.com/watch?v=xiujksUfzUA)
+
+4.15. [Index Selectivity](https://www.youtube.com/watch?v=On8HHR1agsI)
+
+4.16. [Hinting an Index](https://www.youtube.com/watch?v=UWpBNV378pE)
+
+4.17. [Hinting in Node.js](https://www.youtube.com/watch?v=jWdTufrooYo)
+
+4.18. [Efficiency of Index Use](https://www.youtube.com/watch?v=1sADN-NKwhY)
+
+4.19. [Geospatial Indexes](https://www.youtube.com/watch?v=UKUDYqNVL6I)
+
+4.20. [Geospatial Spherical](https://www.youtube.com/watch?v=pULU4DVsUWQ)
+
+4.21. [Text Searches in MongoDB](https://www.youtube.com/watch?v=l_2kwrIlZ_g)
+
+4.22. [Logging Slow Queries](https://www.youtube.com/watch?v=aWuvC-O7Qkk)
+
+4.23. [Profiling](https://www.youtube.com/watch?v=pN1Yhrup9-I)
+
+4.24. [Mongotop](https://www.youtube.com/watch?v=D9YLXgy7NYo)
+
+4.25. [Mongostat](https://www.youtube.com/watch?v=eLWQO_AJmrI)
+
+4.26. [Sharding Overview](https://www.youtube.com/watch?v=BDxT-VZdYqc)
+
+## WEEK 5: AGGREGATION FRAMEWORK
+
+5.1. [Introduction to Week 5](https://www.youtube.com/watch?v=EaEIHm3CMQM)
+
+5.2. [Simple Aggregation Example](https://www.youtube.com/watch?v=DQBXCsjeO5c)
+
+5.3. [The Aggregation Pipeline](https://www.youtube.com/watch?v=AuO8CEkTG6Y)
+
+5.4. [Simple Example Expanded](https://www.youtube.com/watch?v=3lEpnMcfpCs)
+
+5.5. [Compound Grouping](https://www.youtube.com/watch?v=qTbtax_cKcc)
+
+5.6. [Using a document for _id](https://www.youtube.com/watch?v=zoN4cj_XQzY)
+
+5.7. [Aggregation Expressions](https://www.youtube.com/watch?v=L4G14MTfTgQ)
+
+5.8. [Using $sum](https://www.youtube.com/watch?v=93MSz3uDC1A)
+
+5.9. [Using $avg](https://www.youtube.com/watch?v=baIDZ-M5j7w)
+
+5.10. [Using $addToSet](https://www.youtube.com/watch?v=YzURaZnKI9s)
+
+5.11. [Using $push](https://www.youtube.com/watch?v=LQcBM-g0ACY)
+
+5.12. [Using $max and $min](https://www.youtube.com/watch?v=BYoNX4trjOQ)
+
+5.13. [Double $group stages](https://www.youtube.com/watch?v=EIWF9Oxeb8M)
+
+5.14. [Using $project](https://www.youtube.com/watch?v=TbQ2PI5Fib0)
+
+5.15. [Using $match](https://www.youtube.com/watch?v=7RtHG90Hrbw)
+
+5.16. [Using $sort](https://www.youtube.com/watch?v=HUEtV7omSb8)
+
+5.17. [Using $limit and $skip](https://www.youtube.com/watch?v=o5hzYKXUyrU)
+
+5.18. [Revisiting $first and $last](https://www.youtube.com/watch?v=JOdAnxVAMwc)
+
+5.19. [Using $unwind](https://www.youtube.com/watch?v=E4aYOQPeQvI)
+
+5.20. [$unwind example](https://www.youtube.com/watch?v=U_4Enh2TTp4)
+
+5.21. [Double $unwind](https://www.youtube.com/watch?v=YXGL27217B8)
+
+5.22. [Mapping between SQL and Aggregation](https://www.youtube.com/watch?v=auL2R0XKlyM)
+
+5.23. [Some Common SQL examples](https://www.youtube.com/watch?v=ep2gLSR6C0U)
+
+5.24. [Limitations of the Aggregation Framwork](https://www.youtube.com/watch?v=U_gRSxEq3c0)
+
+## WEEK 6: APPLICATION ENGINEERING
+
+6.1. [Introduction to Week 6](https://www.youtube.com/watch?v=3zcbhNHebAc)
+
+6.2. [Introduction to Replication](https://www.youtube.com/watch?v=f1WTYGORU3w)
+
+6.3. [Replica Set Elections](https://www.youtube.com/watch?v=WFXSVHO78bQ)
+
+6.4. [Write Consistency](https://www.youtube.com/watch?v=Oqf_Eza-s1M)
+
+6.5. [Creating a Replica Set](https://www.youtube.com/watch?v=flCFVFBRsKI)
+
+6.6. [Implications of Replication](https://www.youtube.com/watch?v=GEViDe9NRMk)
+
+6.7. [Replica Set Internals](https://www.youtube.com/watch?v=lx0Kj4n4EWM)
+
+6.8. [Failover and Rollback](https://www.youtube.com/watch?v=IW1oW_Adlt0)
+
+6.9. [Connecting to a Replica Set from the Node.js Driver](https://www.youtube.com/watch?v=H1bzY0ktgEg)
+
+6.10. [Failover in the Node.js Driver](https://www.youtube.com/watch?v=15jBQRolLV4)
+
+6.11. [Write Concern](https://www.youtube.com/watch?v=ucqgEUVISqM)
+
+6.12. [Read Preferences](https://www.youtube.com/watch?v=vpbs3SEgmvE)
+
+6.13. [Network Errors](https://www.youtube.com/watch?v=BycNYXFpqhM)
+
+6.14. [Introduction to Sharding](https://www.youtube.com/watch?v=_GfDqa1qRl0)
+
+6.15. [Building a Sharded Environment](https://www.youtube.com/watch?v=aaYc2W4keF4)
+
+6.16. [Implications of Sharding](https://www.youtube.com/watch?v=ig278F60gRA)
+
+6.17. [Sharding + Replication](https://www.youtube.com/watch?v=gkUCUbM0oEg)
+
+6.18. [Choosing a Shard Key](https://www.youtube.com/watch?v=8q2GB3QSBSI)
+
+## WEEK 7: MONGOOSE
+
+7.1. [Introduction to Week 7](https://www.youtube.com/watch?v=fDxtbWX1BiQ)
+
+7.2. [Introduction to Blog](https://www.youtube.com/watch?v=iWZ6GtUffT0)
+
+7.3. [Express with Mongoose](https://www.youtube.com/watch?v=0Ee4KXvEmXk)
+
+7.4. [Jade](https://www.youtube.com/watch?v=etQKi5Sb8GU)
+
+7.5. [Views](https://www.youtube.com/watch?v=S5cp8rCjqJc)
+
+7.6. [Error Handling](https://www.youtube.com/watch?v=nJsFV4adxo4)
+
+7.7. [Authentication](https://www.youtube.com/watch?v=V-vnAd2PDbs)
+
+7.8. [Model](https://www.youtube.com/watch?v=u0J70a2mQzM)
+
+7.9. [Middleware](https://www.youtube.com/watch?v=sH338S08xEw)
+
+7.10. [Routes](https://www.youtube.com/watch?v=fx5DI_85PWo)
+
+7.11. [Login Simplification](https://www.youtube.com/watch?v=pqsdU4851NA)
+
+7.12. [Creating Posts](https://www.youtube.com/watch?v=oblu8zSC7PA)
+
+7.13. [Blog Post Model](https://www.youtube.com/watch?v=nvBF1r1Y_y0)
+
+7.14. [Post Display Route](https://www.youtube.com/watch?v=uFcg8nMkxF8)
+
+7.15. [Revisiting Homepage](https://www.youtube.com/watch?v=OR0g_r13hok)
+
+7.16. [Deleting Posts](https://www.youtube.com/watch?v=WmnsjuMmesw)
+
+7.17. [Editing Posts](https://www.youtube.com/watch?v=LMSkdsHUsKY)
+
+7.18. [Comments](https://www.youtube.com/watch?v=q0-duqCwORk)
