--- a/M102.MongoDB.for.DBAs.md
+++ b/M102.MongoDB.for.DBAs.md
@@ -129,3 +129,129 @@
 3.20. [The Profiler](https://www.youtube.com/watch?v=MzLmI8FNB94)
 
 3.21. [mongostat and mongotop](https://www.youtube.com/watch?v=fEgl1DT_lDA)
+
+## CHAPTER 4: REPLICATION
+
+4.1. [Introduction to Week 4: Replication Overview](https://www.youtube.com/watch?v=eNFWxRFIbcI)
+
+4.2. [Replication with Sharding](https://www.youtube.com/watch?v=K7nWCuA5wF4)
+
+4.3. [Asynchronous Replication](https://www.youtube.com/watch?v=3p30vjb-Rx8)
+
+4.4. [Statement-based vs. Binary Replication](https://www.youtube.com/watch?v=yutpUgJMkk4)
+
+4.5. [Replication Concepts](https://www.youtube.com/watch?v=AYBOd-tpdKo)
+
+4.6. [Automatic Failover](https://www.youtube.com/watch?v=VsnI8uCTG60)
+
+4.7. [Recovery](https://www.youtube.com/watch?v=TGsnu9RBjzA)
+
+4.8. [Starting Replica Sets](https://www.youtube.com/watch?v=xkg3sySEAE0)
+
+4.9. [Initiating a Replica](https://www.youtube.com/watch?v=EaGhuXPZZbk)
+
+4.10. [Replica Set Status](https://www.youtube.com/watch?v=QspOQbOShSY)
+
+4.11. [Replica Set Commands](https://www.youtube.com/watch?v=e7Mhy-LAfLw)
+
+4.12. [Reading & Writing](https://www.youtube.com/watch?v=rUhe8CJCtG8)
+
+4.13. [Failover](https://www.youtube.com/watch?v=MGoHhWbMDaU)
+
+4.14. [Read Preference](https://www.youtube.com/watch?v=I62q4cyeSyc)
+
+4.15. [Read Preference Options](https://www.youtube.com/watch?v=jCEZvexlpj4)
+
+## CHAPTER 5: REPLICATION PART 2
+
+5.1. [Introduction to Week 5](https://www.youtube.com/watch?v=Q9jPiNrEQ0U)
+
+5.2. [Reconfiguring a Replica Set](https://www.youtube.com/watch?v=kkqX5Hwah6Q)
+
+5.3. [Arbiters](https://www.youtube.com/watch?v=4W0GO2CAu2w)
+
+5.4. [Priority Options](https://www.youtube.com/watch?v=mSeUC5dRd44)
+
+5.5. [Hidden Option & Slave Delay](https://www.youtube.com/watch?v=X1hCBT2UTuo)
+
+5.6. [Voting Options](https://www.youtube.com/watch?v=w14Re7vCx40)
+
+5.7. [Applied Reconfiguration](https://www.youtube.com/watch?v=CvaV2QqV-AM)
+
+5.8. [Write Concern Principals](https://www.youtube.com/watch?v=73Jl2woKhNo)
+
+5.9. [Examining the 'w' Parameter](https://www.youtube.com/watch?v=K3N6psPZCD0)
+
+5.10. [Write Concern Use Cases & Patterns](https://www.youtube.com/watch?v=sSkFhx1jKSs)
+
+5.11. [Reexamining the Page View Counter Pattern](https://www.youtube.com/watch?v=MjrNWE38QnM)
+
+5.12. [wtimeout & Capacity Planning](https://www.youtube.com/watch?v=K5Q1t1oV0a0)
+
+5.13. [Replica Sets in a Single Datacenter](https://www.youtube.com/watch?v=lSMLN6QqLyQ)
+
+5.14. [Replica Sets in Multiple Datacenters](https://www.youtube.com/watch?v=YEeudsS3lqg)
+
+## CHAPTER 6: SCALABILITY
+
+6.1. [Sharding & Data Distribution](https://www.youtube.com/watch?v=xvWzS9j7IIY)
+
+6.2. [Chunks & Operations](https://www.youtube.com/watch?v=v7Gibss9JAk)
+
+6.3. [Sharding Processes](https://www.youtube.com/watch?v=XMnxjcdiMJs)
+
+6.4. [Cluster Topology](https://www.youtube.com/watch?v=ZyDNnN8-4Ak)
+
+6.5. [Running on localhost](https://www.youtube.com/watch?v=lQ-tf4XQlQ8)
+
+6.6. [The Config Database](https://www.youtube.com/watch?v=WVXmIVUGBm4)
+
+6.7. [Adding the Initial Shards](https://www.youtube.com/watch?v=-Ijt60KkWpc)
+
+6.8. [Enable Sharding for a Collection](https://www.youtube.com/watch?v=G2GYYDTfq-M)
+
+6.9. [Working with a Sharded Cluster](https://www.youtube.com/watch?v=m0Q5kEfBc14)
+
+6.10. [Cardinality & Monotonic Shard Keys](https://www.youtube.com/watch?v=F59aU0I5DK8)
+
+6.11. [Shard Key Selection Example](https://www.youtube.com/watch?v=ujlNVJK5dMc)
+
+6.12. [Process and Machine Layout](https://www.youtube.com/watch?v=j43kGempShk)
+
+6.13. [Bulk Inserts and Pre-splitting](https://www.youtube.com/watch?v=rYGOF-MjRQU)
+
+6.14. [Further Tips and Best Practices](https://www.youtube.com/watch?v=9QXa9Uz8bjc)
+
+## CHAPTER 7: BACKUP AND RECOVERY
+
+7.1. [Introduction to Week 7](https://www.youtube.com/watch?v=1n0IDMAWR0Y)
+
+7.2. [Overview of Security](https://www.youtube.com/watch?v=TOtt-8SRlA4)
+
+7.3. [Security continued: Authentication and Authorization](https://www.youtube.com/watch?v=BAvTSOJGynA)
+
+7.4. [SSL and Keyfiles](https://www.youtube.com/watch?v=Sj4737nkV08)
+
+7.5. [Security and Clients](https://www.youtube.com/watch?v=4eWnyAGxJ68)
+
+7.6. [Intra-cluster Security](https://www.youtube.com/watch?v=SI-P8wZ8hM0)
+
+7.7. [Overview of Backing Up](https://www.youtube.com/watch?v=hl58MKd2jCs)
+
+7.8. [Mongodump](https://www.youtube.com/watch?v=tbQE2ZPPbHA)
+
+7.9. [Filesystem Snapshotting](https://www.youtube.com/watch?v=6A_jy8_YRIg)
+
+7.10. [Backing Up a Sharded Cluster](https://www.youtube.com/watch?v=DAWoj5Hd2Mo)
+
+7.11. [Backup Strategies](https://www.youtube.com/watch?v=7x9UPaq-i78)
+
+7.12. [Additional Features of MongoDB](https://www.youtube.com/watch?v=Ih8PVVwvyuU)
+
+7.13. [Restoring Data with MMS Backup](https://www.youtube.com/watch?v=4uD9-f0NshA)
+
+7.14. [GridFS](https://www.youtube.com/watch?v=cb0odeI0WOg)
+
+7.15. [Hardware Tips](https://www.youtube.com/watch?v=19VZJ9H3LmQ)
+
+7.16. [Additional Resources](https://www.youtube.com/watch?v=BYegVYF7lHY)
