--- a/M202.MongoDB.Advanced.Deployment.and.Operations.md
+++ b/M202.MongoDB.Advanced.Deployment.and.Operations.md
@@ -163,3 +163,173 @@
 3.18. [Restoration caveats](https://www.youtube.com/watch?v=6DuhXsbIZTI)
 
 3.19. [MongoDB tools for backup](https://www.youtube.com/watch?v=Ln6gyZ_0yDk)
+
+## CHAPTER 4: FAULT TOLERANCE AND AVAILABILITY
+
+4.1. [Rolling maintenance](https://www.youtube.com/watch?v=OO3tpaC4L4g)
+
+4.2. [Rolling maintenance use cases](https://www.youtube.com/watch?v=LH22a2FATho)
+
+4.3. [Can I put a load balancer in front of a replica set?](https://www.youtube.com/watch?v=fqcDrfwvygU)
+
+4.4. [Using load balancers with sharded clusters](https://www.youtube.com/watch?v=LW_mlmvwWDM)
+
+4.5. [Driver options: connections](https://www.youtube.com/watch?v=-kzJ44CbCsM)
+
+4.6. [Driver options: socket timeout](https://www.youtube.com/watch?v=Vxmu2a60t0g)
+
+4.7. [Driver options: high availability](https://www.youtube.com/watch?v=K-HCSA83iqI)
+
+4.8. [Connection management in replica sets](https://www.youtube.com/watch?v=RFsNyf1mBhs)
+
+4.9. [Connection management in sharded clusters](https://www.youtube.com/watch?v=k3wEg0LQX-E)
+
+4.10. [Formula for maximum mongos connections](https://www.youtube.com/watch?v=CVFqJ80ZpIw)
+
+4.11. [Read preferences](https://www.youtube.com/watch?v=TuDMmq7oGHU)
+
+4.12. [Rollback](https://www.youtube.com/watch?v=XEzwehA46bQ)
+
+4.13. [Other MongoDB states](https://www.youtube.com/watch?v=l09AtjdZaew)
+
+## CHAPTER 5: SHARDED CLUSTER MANAGEMENT
+
+5.1. [Starting and stopping the balancer](https://www.youtube.com/watch?v=exzSK-yjoqc)
+
+5.2. [When does the balancer kick in?](https://www.youtube.com/watch?v=fzSGRtNLWyY)
+
+5.3. [How does the balancer pick chunks?](https://www.youtube.com/watch?v=T1w6P5TPN6c)
+
+5.4. [Scaling out with shards: Practical considerations](https://www.youtube.com/watch?v=iE8BXU4RYnU)
+
+5.5. [Config servers](https://www.youtube.com/watch?v=RnLcmVcYrVU)
+
+5.6. [The config database](https://www.youtube.com/watch?v=DdctidkwpFY)
+
+5.7. [The Config Database: Vital Collections](https://www.youtube.com/watch?v=UFRgGFxA_bg)
+
+5.8. [Upgrades on sharded clusters](https://www.youtube.com/watch?v=3XrnQ9yFwfU)
+
+5.9. [Services a mongos performs](https://www.youtube.com/watch?v=NfbTNoD82rs)
+
+5.10. [Mongos processes do connection pooling](https://www.youtube.com/watch?v=YJ_TOKkIHv8)
+
+5.11. [Mongos Process: Refreshing its Cache](https://www.youtube.com/watch?v=Wo5TBZmfnHI)
+
+5.12. [Chunk Splitting Overview](https://www.youtube.com/watch?v=d692uIssk0k)
+
+5.13. [Chunk splitting algorithm](https://www.youtube.com/watch?v=b8dfn8eSlS8)
+
+5.14. [Manual chunk splitting](https://www.youtube.com/watch?v=YXfMxZbEBuI)
+
+5.15. [Jumbo chunks](https://www.youtube.com/watch?v=HwB9moUEBEI)
+
+5.16. [Manual pre-splitting overview](https://www.youtube.com/watch?v=9hDfnRdVoeg)
+
+5.17. [Manual pre-splitting example: Describing the data](https://www.youtube.com/watch?v=-d8XpvvVABU)
+
+5.18. [Manual pre-splitting example: Actually pre-splitting the data](https://www.youtube.com/watch?v=BcBTTJli8nc)
+
+5.19. [Tag-based sharding overview -- why use it?](https://www.youtube.com/watch?v=HMrWxcNR2Oc)
+
+5.20. [Simple tag-based sharding example](https://www.youtube.com/watch?v=m_djWGAaoic)
+
+5.21. [Tag-based sharding caveats](https://www.youtube.com/watch?v=pFdyaZoxqsI)
+
+5.22. Hash-based sharding overview](https://www.youtube.com/watch?v=98dRSnHtIUc)
+
+5.23. [Hash-based sharding demo](https://www.youtube.com/watch?v=UnzGPMddPH0)
+
+5.24. [Hash-based sharding pros and cons](https://www.youtube.com/watch?v=MQlnJq7nzEA)
+
+5.25. [Empty chunks](https://www.youtube.com/watch?v=PAyFFj_n1yk)
+
+5.26. [Data imbalance](https://www.youtube.com/watch?v=-cdmEIgMUY4)
+
+5.27. [Removing a shard](https://www.youtube.com/watch?v=kSlGXXe215Q)
+
+## CHAPTER 6: DATA INTEGRITY AND LOG FILES
+
+6.1. [Data integrity: Write concern](https://www.youtube.com/watch?v=npPJVKxd1H0)
+
+6.2. [Data integrity: Write concerns involving journaling and fsync](https://www.youtube.com/watch?v=3qSqB7fIv10)
+
+6.3. [Data integrity: 2.4 notes](https://www.youtube.com/watch?v=7ogsCdSZUM0)
+
+6.4. [Data integrity: 2.6 notes](https://www.youtube.com/watch?v=UkJB2fM1F-o)
+
+6.5. [Data loading](https://www.youtube.com/watch?v=MdTDF4Msm90)
+
+6.6. [Error reporting while loading data](https://www.youtube.com/watch?v=1cLkiWRuOwM)
+
+6.7. [db.currentOp()](https://www.youtube.com/watch?v=uDRl0JFBn7Y)
+
+6.8. [Taking actions based on the output of db.currentOp()](https://www.youtube.com/watch?v=GowgheenqRo)
+
+6.9. [2.6 notes for currentOp()](https://www.youtube.com/watch?v=zYEeTuoXwAE)
+
+6.10. [Database profiler overview](https://www.youtube.com/watch?v=ww5pYJqukAg)
+
+6.11. [Profiler demo: helper](https://www.youtube.com/watch?v=_ApSNwSRYVo)
+
+6.12. [Profiler demo: examining system profiler operations](https://www.youtube.com/watch?v=FSrJz_hkisM)
+
+6.13. [Profiler demo: filtering by timestamp](https://www.youtube.com/watch?v=P6igqf5Vc9w)
+
+6.14. [Tailing capped collections](https://www.youtube.com/watch?v=lGcruDWeWA8)
+
+6.15. [Mongo connector](https://www.youtube.com/watch?v=-acdvMd8N0U)
+
+6.16. [Examining log files](https://www.youtube.com/watch?v=qc1hOvhCohY)
+
+6.17. [Log files are noisy](https://www.youtube.com/watch?v=CVp8Majin4Q)
+
+6.18. [Filtering out connections from log files](https://www.youtube.com/watch?v=dwAGzCOGJSE)
+
+6.19. [Grepping log files](https://www.youtube.com/watch?v=lGsbhB2np1o)
+
+6.20. [Examining connections in log files](https://www.youtube.com/watch?v=lMmvnThgzio)
+
+6.21. [Introducing mtools](https://www.youtube.com/watch?v=vv05f75YBTA)
+
+6.22. [mtools: mlaunch](https://www.youtube.com/watch?v=rpILJs4CYQs)
+
+6.23. [mtools: mloginfo](https://www.youtube.com/watch?v=jBVYEy6DYpQ)
+
+6.24. [mtools: mlogfilter](https://www.youtube.com/watch?v=TiZpSH_o4C4)
+
+6.25. [mtools: mplotqueries](https://www.youtube.com/watch?v=AEPjCFeRN04)
+
+## CHAPTER 7: SECURITY, AUTHENTICATION AND AUTHORIZATION
+
+7.1. [Securing MongoDB overview](https://www.youtube.com/watch?v=ZV15RYBHsNQ)
+
+7.2. [Securing MongoDB step by step](https://www.youtube.com/watch?v=-Kngi_avFE0)
+
+7.3. [Locking down the network](https://www.youtube.com/watch?v=vagtFWxWt_k)
+
+7.4. [Evolution of native auth in MongoDB](https://www.youtube.com/watch?v=G3hB8V-4cYQ)
+
+7.5. [Native auth in MongoDB 2.4 and below](https://www.youtube.com/watch?v=OO0suEiO8XM)
+
+7.6. [Native Auth in MongoDB 2.6](https://www.youtube.com/watch?v=sysrDgHl8Xk)
+
+7.7. [Authentication in sharded clusters: Databases](https://www.youtube.com/watch?v=nFkzp2b1MLo)
+
+7.8. [Authentication in sharded clusters: Collections](https://www.youtube.com/watch?v=SwLn4rP2AAE)
+
+7.9. [Authentication in sharded clusters: Users](https://www.youtube.com/watch?v=JYH5ExoUrig)
+
+7.10. [Authorization: Concepts](https://www.youtube.com/watch?v=yLQf6KuwudM)
+
+7.11. [Authorization: Roles](https://www.youtube.com/watch?v=fOIElCEo4eg)
+
+7.12. [Authorization: Demo](https://www.youtube.com/watch?v=HYiR_ygEJbI)
+
+7.13. [Using SSL with MongoDB overview](https://www.youtube.com/watch?v=1SMocMx7hVI)
+
+7.14. [Using SSL with MongoDB 2.6](https://www.youtube.com/watch?v=OUwmjtVJ3dw)
+
+7.15. [SSL with MongoDB demo](https://www.youtube.com/watch?v=pvN4ODe74Ic)
+
+7.16. [SSL with MongoDB caveats](https://www.youtube.com/watch?v=Gudgmsfubh4)
