--- a/M202.MongoDB.Advanced.Deployment.and.Operations.md
+++ b/M202.MongoDB.Advanced.Deployment.and.Operations.md
@@ -236,7 +236,7 @@
 
 5.21. [Tag-based sharding caveats](https://www.youtube.com/watch?v=pFdyaZoxqsI)
 
-5.22. Hash-based sharding overview](https://www.youtube.com/watch?v=98dRSnHtIUc)
+5.22. [Hash-based sharding overview](https://www.youtube.com/watch?v=98dRSnHtIUc)
 
 5.23. [Hash-based sharding demo](https://www.youtube.com/watch?v=UnzGPMddPH0)
 
